# ROBOTIS-MANIPULATOR-X

./: README.md
manipulator_x_description/: CMakeLists.txt  package.xml
manipulator_x_description/MANI_4X_STL/: manipulatorx4_rev2_v5.stl
manipulator_x_description/STL_MPX540_6X/: .~lock.doc.docx#  assm_mpx540_6x_1.stl  assm_mpx540_6x_3.stl  assm_mpx540_6x_5.stl  assm_mpx540_6x_base.stl  doc.docx
manipulator_x_description/doc/: .~lock.manipulator-x_160829_jyr.docx#  .~lock.robotis_manipulator_x_7dof.ods#  .~lock.robotis_manipulator_x_gripper_model_mass_property.xlsx#  end.docx  manipulator-x_160829_jyr.docx  manipulator-x_160830_jyr.docx  robotis_manipulator_x_4dof_mass_property.xlsx  robotis_manipulator_x_7dof.ods  robotis_manipulator_x_gripper_model_mass_property.xlsx  robotis_manipulator_x_mass_property.docx  robotis_manipulator_x_mass_property.xlsx
manipulator_x_description/launch/: manipulator_x.rviz  manipulator_x_ctrl.launch  manipulator_x_ctrl.launch~  manipulator_x_rviz.launch
manipulator_x_description/meshes/: assm_mpx540_6x_0.stl  assm_mpx540_6x_2.stl  assm_mpx540_6x_4.stl  manipulator_x_link2.stl  manipulator_x_link6.stl  manipulator_x_link7.stl  manipulator_x_link8.stl  manipulatorx7_rev1_axis-0.stl  manipulatorx7_rev1_axis-2.stl  manipulatorx7_rev1_axis-4.stl  manipulatorx7_rev1_axis-6.stl  manipulatorx7_rev1_axis-7.stl  manipulatorx7_rev1_base-plate.stl
manipulator_x_description/meshes/STL_ROS/: manipulatorx7_rev1_axis-1.stl  manipulatorx7_rev1_axis-3.stl  manipulatorx7_rev1_axis-5.stl
manipulator_x_description/meshes/old/: manipulator_x_base.stl  manipulator_x_link1.stl  manipulator_x_link4.stl  manipulator_x_link5.stl  manipulator_x_link9.stl  manipulator_x_tooltip.stl
manipulator_x_description/src/: manipulator_x_rviz_pub.cpp
manipulator_x_description/urdf/: manipulator_x (copy).xacro  manipulator_x.gazebo  manipulator_x.gazebo~  manipulator_x.xacro  manipulator_x_4dof.xacro  manipulator_x_gripper.xacro  manipulator_x_tooltip.xacro
manipulator_x_gazebo/: CMakeLists.txt  package.xml
manipulator_x_gazebo/config/: effort_controller.yaml  effort_controller_4dof.yaml  effort_controller_gripper.yaml  position_controller.yaml  position_controller_4dof.yaml  position_controller_gripper.yaml
manipulator_x_gazebo/launch/: effort_controller.launch  effort_controller_4dof.launch  effort_controller_gripper.launch  effort_controller_tooltip.launch  manipulator_x_gazebo.launch  position_controller.launch  position_controller_4dof.launch  position_controller_gripper.launch  position_controller_tooltip.launch
manipulator_x_gazebo/src/: manipulator_x_gazebo_grip_pub.cpp
manipulator_x_gazebo/world/: empty.world
manipulator_x_gripper_module/: CMakeLists.txt  package.xml
manipulator_x_gripper_module-msgs/: CMakeLists.txt  package.xml
manipulator_x_gripper_module/include/manipulator_x_gripper_module/: gripper_module.h
manipulator_x_gripper_module/src/: gripper_module.cpp
manipulator_x_gripper_module_msgs/: CMakeLists.txt  package.xml
manipulator_x_manager/: CMakeLists.txt  package.xml
manipulator_x_manager/config/: MANIPULATOR-X.robot  MANIPULATOR-X4.robot  MANIPULATOR-X_4dof.robot  MANIPULATOR-X_gripper.robot  MANIPULATOR-X_tooltip.robot  dxl_init.yaml  dxl_init.yaml~  dxl_init_4dof.yaml  dxl_init_gripper.yaml  dxl_init_tooltip.yaml  offset.yaml  offset_4dof.yaml  offset_gripper.yaml  offset_tooltip.yaml
manipulator_x_manager/launch/: manipulator_x_manager.launch
manipulator_x_manager/src/: manipulator_x_manager.cpp
manipulator_x_moveit/: .setup_assistant  CMakeLists.txt  package.xml
manipulator_x_moveit/config/: fake_controllers.yaml  gazebo_manipulator_x4.srdf  joint_limits.yaml  ompl_planning.yaml  robotis_manipulator_x.srdf
manipulator_x_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  manipulator_x4_moveit.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  warehouse.launch  (+3 more)
manipulator_x_planning/: CMakeLists.txt  package.xml
manipulator_x_planning/src/: manipulator_x_planning.cpp
manipulator_x_position_ctrl_gui/: CMakeLists.txt  mainpage.dox  package.xml
manipulator_x_position_ctrl_module/: CMakeLists.txt  package.xml
manipulator_x_position_ctrl_module/config/: initial_pose.yaml  zero_pose.yaml
manipulator_x_position_ctrl_module/include/manipulator_x_position_ctrl_module/: motion_planning_tool.h  position_ctrl_module.h
manipulator_x_position_ctrl_module/src/: motion_planning_tool.cpp  position_ctrl_module.cpp
manipulator_x_position_ctrl_module_gui/: CMakeLists.txt  mainpage.dox  package.xml
manipulator_x_position_ctrl_module_gui/include/manipulator_x_position_ctrl_module_gui/: main_window.hpp  qnode.hpp
manipulator_x_position_ctrl_module_gui/src/: main.cpp  main_window.cpp  qnode.cpp
manipulator_x_position_ctrl_module_gui/ui/: main_window.ui
manipulator_x_position_ctrl_module_msgs/: CMakeLists.txt  package.xml
manipulator_x_position_ctrl_module_msgs/msg/: JointPose.msg  KinematicsPose.msg
manipulator_x_position_ctrl_module_msgs/srv/: GetJointPose.srv  GetKinematicsPose.srv  JointPoseToKinematicsPose.srv  KinematicsPoseToJointPose.srv
manipulator_x_srv_test/: CMakeLists.txt  package.xml
manipulator_x_srv_test/src/: manipulator_x_srv_test.cpp
manipulator_x_torque_ctrl_gui/: CMakeLists.txt  mainpage.dox  package.xml
manipulator_x_torque_ctrl_module/: CMakeLists.txt  package.xml
manipulator_x_torque_ctrl_module/config/: _torque_control_force_gain.yaml  torque_control_force_gain.yaml  torque_control_pid_gain.yaml
manipulator_x_torque_ctrl_module/include/manipulator_x_torque_ctrl_module/: torque_ctrl_module.h
manipulator_x_torque_ctrl_module/src/: torque_ctrl_module.cpp
manipulator_x_torque_ctrl_module_msgs/: CMakeLists.txt  package.xml
manipulator_x_torque_ctrl_module_msgs/msg/: JointGain.msg  JointPose.msg  KinematicsGain.msg  KinematicsPose.msg
manipulator_x_torque_ctrl_module_msgs/srv/: GetJointGain.srv  GetKinematicsGain.srv
(+12 files in other folders)
