<?xml version="1.0"?>
<package>
  <name>manipulator_x_description</name>
  <version>0.0.0</version>
  <description>The manipulator_x_description package</description>

  <maintainer email="sch@robotis.com">SCH</maintainer>
  <author email="sch@robotis.com">SCH</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>