<?xml version="1.0"?>
<package>
  <name>manipulator_x_gazebo</name>
  <version>0.0.0</version>
  <description>The manipulator_x_gazebo package</description>

  <maintainer email="sch@robotis.com">SCH</maintainer>
  <author email="sch@robotis.com">SCH</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>