<?xml version="1.0"?>
<package>
  <name>manipulator_x_position_ctrl_module</name>
  <version>0.0.1</version>
  <description>
    The manipulator_x_position_ctrl_module package
  </description>
  <license>BSD</license>
  <author email="thlim@robotis.com">Darby</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export></export>
</package>
