<?xml version="1.0"?>
<package>
  <name>manipulator_x_position_ctrl_module</name>
  <version>0.0.1</version>
  <description>
    The manipulator_x_position_ctrl_module package
  </description>
  <license>BSD</license>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <author email="sch@robotis.com">SCH</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>manipulator_x_position_ctrl_module_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>manipulator_x_position_ctrl_module_msgs</run_depend>
  <export></export>
</package>
