<?xml version="1.0"?>
<package>
  <name>manipulator_x_position_ctrl_module_gui</name>
  <version>0.0.1</version>
  <description>
     manipulator_x_position_ctrl_module_gui
  </description>
  <license>BSD</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend> 
</package>
