<?xml version="1.0"?>
<package>
  <name>manipulator_x_position_ctrl_module_gui</name>
  <version>0.0.1</version>
  <description>
     manipulator_x_position_ctrl_module_gui
  </description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>manipulator_x_position_ctrl_module_msgs</build_depend>
  <build_depend>robotis_math</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libqt4-dev</run_depend> 
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>manipulator_x_position_ctrl_module_msgs</run_depend>
  <run_depend>robotis_math</run_depend>
</package>
