<?xml version="1.0"?>
<package>
  <name>manipulator_x_position_ctrl_module_msgs</name>
  <version>0.0.0</version>
  <description>The manipulator_x_position_ctrl_module_msgs package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export></export>
</package>
