<?xml version="1.0"?>
<package>
  <name>manipulator_x_torque_ctrl_module</name>
  <version>0.0.0</version>
  <description>The manipulator_x_torque_ctrl_module package</description>

  <maintainer email="sch@robotis.com">SCH</maintainer>
  <author email="sch@robotis.com">SCH</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>manipulator_x_torque_ctrl_module_msgs</build_depend>-->
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>robotis_device</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>